k8s/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: production
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: api-service-mtls
  namespace: production
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: api-service
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: media-service-mtls
  namespace: production
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: media-service
  mtls:
    mode: STRICT
